--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
     "expo": "~51.0.0",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
